# blockstats-explorer

./: CLAUDE.md  Cargo.toml  README.md  package.json
scripts/: build.sh
src/: lib.rs
www/: index.html  script.js  style.css
www/data/: datasets.json
www/pkg/: fee_explorer.d.ts  fee_explorer.js  fee_explorer_bg.wasm
