[package]
name = "fee-explorer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
# WASM dependencies
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
] }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
bitcoin = { version = "0.31", features = ["serde"] }
bitcoin_hashes = "0.13"
anyhow = "1.0"
bincode = "1.3"
arrow = "53"
arrow-array = "53"
arrow-ipc = "53"